Bug 42973 - ALC269VB -- internal mic -- no input
Summary: ALC269VB -- internal mic -- no input
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-21 22:20 UTC by Oleksii Shevchuk
Modified: 2012-06-13 15:17 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.3
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Old /proc/asound/card0/codec#0 (8.49 KB, application/octet-stream)
2012-03-21 22:20 UTC, Oleksii Shevchuk
Details
New /proc/asound/card0/codec#0 (8.87 KB, application/octet-stream)
2012-03-21 22:21 UTC, Oleksii Shevchuk
Details
alsa-info for 3.2 (19.94 KB, text/plain)
2012-03-22 10:01 UTC, Oleksii Shevchuk
Details
alsa-info for 3.3 (19.56 KB, text/plain)
2012-03-22 10:02 UTC, Oleksii Shevchuk
Details
Fix patch (2.41 KB, patch)
2012-03-22 13:44 UTC, Takashi Iwai
Details | Diff

Description Oleksii Shevchuk 2012-03-21 22:20:05 UTC
After updating from 3.2.9 to 3.3.0 internal microphone produces no sound. Booting with 3.2 with ~same config fix issue.

Here are my /proc/asound/card0/codec#0 from 3.3 and 3.2
Comment 1 Oleksii Shevchuk 2012-03-21 22:20:34 UTC
Created attachment 72672 [details]
Old /proc/asound/card0/codec#0
Comment 2 Oleksii Shevchuk 2012-03-21 22:21:07 UTC
Created attachment 72673 [details]
New /proc/asound/card0/codec#0
Comment 3 Takashi Iwai 2012-03-22 08:33:41 UTC
Could you give alsa-info.sh output (run with --no-upload option) on both working and non-working kernels, instead?
Comment 4 Oleksii Shevchuk 2012-03-22 10:01:38 UTC
Created attachment 72680 [details]
alsa-info for 3.2
Comment 5 Oleksii Shevchuk 2012-03-22 10:02:09 UTC
Created attachment 72681 [details]
alsa-info for 3.3
Comment 6 Takashi Iwai 2012-03-22 13:43:52 UTC
Could you try the patch below?
Comment 7 Takashi Iwai 2012-03-22 13:44:10 UTC
Created attachment 72683 [details]
Fix patch
Comment 8 Oleksii Shevchuk 2012-03-22 14:14:09 UTC
Mic now works, thanks
Comment 9 Takashi Iwai 2012-03-22 16:14:19 UTC
OK, the patch is now in sound git tree.

It'll be included in the next pull request for 3.3-rc1.
Comment 10 Florian Mickler 2012-04-04 14:59:57 UTC
A patch referencing this bug report has been merged in Linux v3.4-rc1:

commit 26acaf08556a3c64ebf8ea3654b51e6acbb0a26c
Author: Takashi Iwai <tiwai@suse.de>
Date:   Thu Mar 22 14:36:50 2012 +0100

    ALSA: hda/realtek - Fix ADC assignment with a shared HP/Mic pin

Note You need to log in before you can comment on or make changes to this bug.